--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ span {
 <body>
 <div><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Vector_cup_of_coffee.svg/120px-Vector_cup_of_coffee.svg.png">
 </div>
-  <h1>TELL ME and I <span> Forget.</span> TEACH ME and I <span>Remember.</span> Involve me I <span>Learn.</span>
+  <h1>TELL ME and I <span> Forget.</span> TEACH ME and I <span>Remember.</span> Involve me and I <span>Learn.</span>
   <p>BENJAMIN FRANKLIN</p>
   <input type="email" placeholder="Your email">
   <input type="submit">
